fix(date-picker): title and close icon alignment

--- a/packages/components/src/components/date-picker/date-picker.css
+++ b/packages/components/src/components/date-picker/date-picker.css
@@ -31,7 +31,7 @@ duet-date-picker {
   --font-size-heading: var(--telekom-typography-font-size-body);
   --font-size-select-label: var(--telekom-typography-font-size-body);
   --radius-day: var(--telekom-radius-standard);
-  --font-size-day: var(--telekom-typography-font-size-body);
+  --font-size-day: var(--telekom-typography-font-size-caption);
   --font-size-table-header: var(--font-size-day);
   --font-weight-table-header: var(--telekom-typography-font-weight-extra-bold);
   --focus-outline: var(--telekom-line-weight-highlight) solid
@@ -266,7 +266,6 @@ duet-date-picker .duet-date__cell {
 }
 duet-date-picker .duet-date__mobile {
   margin-left: 0;
-  width: 100%;
   padding: var(--telekom-spacing-unit-x1) 0 var(--telekom-spacing-unit-x3) 0;
 }
 
@@ -404,6 +403,10 @@ duet-date-picker .duet-date__day:hover::before {
   duet-date-picker .duet-date__dialog-content {
     zoom: 70%;
   }
+}
+
+duet-date-picker .scale-date-picker__popup-heading {
+  padding: var(--telekom-spacing-unit-x2);
 }
 
 @media (max-width: 35.9375em) {
